# Memory_game_STM32

./: .gitignore  Cargo.toml  build.rs
display/: Cargo.toml
display/src/: fonts.rs  lib.rs
display_with_keyboard/: Cargo.toml
display_with_keyboard/src/: lib.rs
keyboard/: Cargo.toml
keyboard/src/: lib.rs
src/: TM1638.rs  functional.rs  main.rs
